--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header Section -->
     <header>
         <div class="navbar">
-            <img src="/images/chef.png" alt="picture of dog chef">
+            <img src="/images/polite_chef_pooch.png" alt="picture of dog chef" id="logo">
             <nav>
                 <a href="index.html" alt="link to home page" class="nav-links">Home</a>
                 <a href="" alt="link to recipe generator" class="nav-links">Generator</a>
@@ -19,10 +19,11 @@
 
         <!--Brief Intro-->
         <div class="brief-intro">
-            <img src="" alt="image of a chef" id="brief-img">
             <div class="brief-text">
-
+                <h1>A quick meal with only minimal ingredients</h1>
+                <p>Most recipes don't require a lot of recipes as you can make certain dishes with only 3-5 ingredients</p>
             </div>
+            <img src="" alt="image of a chef" id="brief-img">
         </div>
     </header>
     
@@ -32,13 +33,13 @@
         <section class="quote-section">
             <img src="" class="section img">
             <div class="section-text">
-
+                <p class="text">quote here</p>
             </div>
         </section> 
 
         <section class="quote-section">
             <div class="section-text">
-
+                <p class="text">quote here</p>
             </div>
             <img src=""><img src="" class="section-img">
         </section> 
@@ -46,7 +47,7 @@
         <section class="quote-section">
             <img src="" class="section-img">
             <div class="section-text">
-
+                <p class="text">insert quote here</p>
             </div>
         </section>
 
