Changed the images in the html and added a title to the header section

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <!-- Header Section -->
     <header>
         <div class="navbar">
-            <img src="images/polite_chef_pooch.png" alt="picture of dog chef" id="logo">
+            <div class="logo-container">
+                <img src="images/polite_chef_pooch.png" alt="picture of dog chef" id="logo">
+                <span id="site-title">RecipeGenerator</span>
+            </div>
             <nav>
                 <a href="index.html" alt="link to home page" class="nav-links">Home</a>
                 <a href="generator.html" alt="link to recipe generator" class="nav-links">Generator</a>
             </nav>
-        </div> 
+        </div>
 
         <!--Brief Intro-->
         <div class="brief-intro">
@@ -34,23 +37,23 @@
     <main>
 
         <section class="quote-section">
-            <img src="images/tom.png" class="section-img">
+            <img src="images/chefb.png" class="section-img">
             <div class="section-text">
-                <p class="text">"'Chef' doesn't mean that you're the best cook, it simply means 'boss.'" - Tom Colicchio</p>
+                <p class="text">“Great meals don’t need a shopping list as long as a novel—just three ingredients and a little love!”</p>
             </div>
         </section> 
 
         <section class="quote-section">
             <div class="section-text">
-                <p class="text">"Anyone who's a chef, who loves food, ultimately knows that all that matters is: 'Is it good? Does it give pleasure?'" - Anthony Bourdain</p>
+                <p class="text">“With just a few ingredients, you’re not cooking less—you’re creating more flavor, more magic, and more memories!”</p>
             </div>
-            <img src="images/anthony.png" class="section-img">
+            <img src="images/chefw.png" class="section-img">
         </section> 
 
         <section class="quote-section">
-            <img src="images/Michael.png" class="section-img">
+            <img src="images/chefo.png" class="section-img">
             <div class="section-text">
-                <p class="text">"If you're not the one cooking, stay out of the way and compliment the chef." - Michael Strahan</p>
+                <p class="text">“Why complicate the recipe? Three ingredients, one pan, and a whole lot of deliciousness!”</p>
             </div>
         </section>
 
