Added Recipe Generator title on the second page

--- a/generator.html
+++ b/generator.html
@@ -10,7 +10,10 @@
     <!-- Navigation Bar -->
     <header>
         <div class="navbar">
-            <img src="images/polite_chef_pooch.png" alt="picture of dog chef" id="logo">
+            <div class="logo-container">
+                <img src="images/polite_chef_pooch.png" alt="picture of dog chef" id="logo">
+                <span id="site-title">RecipeGenerator</span>
+            </div>
             <nav>
                 <a href="index.html" class="nav-links">Home</a>
             </nav>
